# agentic-research-factory

./: .gitignore  COST_TODO.md  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  auth.py  celery_app.py  config.py  database.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db
backend/agents/: analyst.py  crew.py  editor.py  lead_intel.py  publisher.py  researcher.py  reviewer.py  strategist.py  writer.py
backend/alembic/: env.py
backend/alembic/versions/: 7a897f11fc3e_initial_migration.py  8c8e09665eb6_add_analysis_output_column.py  a1b2c3d4e5f6_add_error_message_to_runs.py  (+4 more)
backend/configs/: prompt_loader.py  prompts.yaml  verticals.py
backend/formatters/: linkedin.py  report.py  summary.py
backend/migrations/: add_vertical_columns.py  v2_workspaces.sql
backend/routers/: analytics.py  hitl.py  outputs.py  runs.py  stream.py  upload.py  verticals.py  workspaces.py
backend/services/: eval_service.py  ingest_service.py  llm_router.py  pdf_service.py  query_rewriter.py  run_service.py
backend/tests/: conftest.py  test_access_control.py  test_analytics.py  test_auth.py  test_auth_success.py  test_benchmark.py  test_eval_and_cost.py  test_health.py  test_lifecycle_and_outputs.py  test_llm_router.py  test_rag.py  test_redis_signaling.py  test_retrieval.py  test_runs.py  test_streaming.py  test_tools.py  test_upload.py  test_verticals.py  test_workspaces.py
backend/tools/: rag.py  scraper.py  search.py
backend/utils/: cache.py  cost_tracker.py  langfuse_utils.py  redis_client.py
(+51 files in other folders)
