[project]
name = "agentic-research-factory-backend"
version = "0.1.0"
description = "FastAPI backend for Agentic Research Factory"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-dotenv==1.0.1",
  "pydantic-settings==2.5.2",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.13.3",
  "crewai>=0.83.0",
  "crewai-tools==0.14.0",
  "PyJWT==2.9.0",
  "tavily-python==0.5.0",
  "firecrawl-py==1.5.0",
  "llama-parse==0.5.14",
  "litellm>=1.60.0",
  "sse-starlette==2.1.3",
  "python-multipart==0.0.12",
  "weasyprint==62.3",
  "markdown==3.7",
  "httpx==0.27.0",
  "vecs==0.4.3",
  "sentence-transformers==3.0.1",
  "langgraph>=0.2.35",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "langchain-core>=0.3.29",
  "redis>=7.4.0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "celery>=5.6.3",
  "langchain-text-splitters>=0.3.11",
  "docling>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
